Fix several bugs

--- a/project.html
+++ b/project.html
@@ -56,15 +56,17 @@
                 </div>
             </div>
             <div class="col-lg-5 px-5 text-end">
-                <div class="h-100 d-inline-flex align-items-center me-4">
-                    <small class="fa fa-phone-alt text-primary me-2"></small>
-                    <small>+55 27 99945-0945</small>
-                </div>
+                <a href="https://api.whatsapp.com/send?phone=5527999450945" target="_blank" rel="noopener noreferrer">
+                    <div class="h-100 d-inline-flex align-items-center me-4">
+                        <small class="fa fa-phone-alt text-primary me-2"></small>
+                        <small>27 99945-0945</small>
+                    </div>
+                    </a>
                 <div class="h-100 d-inline-flex align-items-center mx-n2">
                     <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i class="fab fa-facebook-f"></i></a>
                     <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-square btn-link rounded-0" href=""><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-square btn-link rounded-0" href="https://www.instagram.com/eletrolexsolar/" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </div>
@@ -75,7 +77,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
         <a href="index.html" class="navbar-brand d-flex align-items-center border-end px-4 px-lg-5">
-            <h2 class="m-0 text-primary">Eletrolex</h2>
+            <img src="img/logo-lateral.png" alt="Eletrolex" class="img-fluid" style="max-height: 50px;">
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -93,7 +95,8 @@
     </nav>
     <!-- Navbar End -->
 
-
+<!-- Hidden -->
+<div class ="hidden">
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5">
         <div class="container py-5">
@@ -108,6 +111,7 @@
         </div>
     </div>
     <!-- Page Header End -->
+</div>
 
 
     <!-- Projects Start -->
