--- a/project.html
+++ b/project.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Eletrolex - Energia Renovável</title>
+    <title>Eletrolex Solar - Energia Renovável</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -126,7 +126,7 @@
                     <ul class="list-inline mb-5" id="portfolio-flters">
                         <li class="mx-2 active" data-filter="*">Todos</li>
                         <li class="mx-2" data-filter=".first">Paineis Solares</li>
-                        <li class="mx-2" data-filter=".second">Turbinas de Vento</li>
+                        <li class="mx-2" data-filter=".second">Manutenção e Limpeza</li>
                         <li class="mx-2" data-filter=".third">Ar Condicionado</li>
                     </ul>
                 </div>
@@ -134,9 +134,9 @@
             <div class="row g-4 portfolio-container wow fadeInUp" data-wow-delay="0.5s">
                 <div class="col-lg-4 col-md-6 portfolio-item first">
                     <div class="portfolio-img rounded overflow-hidden">
-                        <img class="img-fluid" src="img/img-600x400-6.jpg" alt="">
+                        <img class="img-fluid" src="img/placa-07.jpeg" alt="">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-light rounded-circle mx-1" href="img/img-600x400-6.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                            <a class="btn btn-lg-square btn-outline-light rounded-circle mx-1" href="img/placa-07.jpeg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                             <a class="btn btn-lg-square btn-outline-light rounded-circle mx-1" href=""><i class="fa fa-link"></i></a>
                         </div>
                     </div>
@@ -155,16 +155,16 @@
                         </div>
                     </div>
                     <div class="pt-3">
-                        <p class="text-primary mb-0">Turbinas de Vento</p>
+                        <p class="text-primary mb-0">Manutenção e Limpeza</p>
                         <hr class="text-primary w-25 my-2">
                         <h5 class="lh-base">Tecnologia de ponta para máxima eficiência e economia.</h5>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item third">
                     <div class="portfolio-img rounded overflow-hidden">
-                        <img class="img-fluid" src="img/img-600x400-4.jpg" alt="">
+                        <img class="img-fluid" src="img/manut-ar-02-600x400.jpg" alt="">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-light rounded-circle mx-1" href="img/img-600x400-4.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                            <a class="btn btn-lg-square btn-outline-light rounded-circle mx-1" href="img/manut-ar-02-600x400.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                             <a class="btn btn-lg-square btn-outline-light rounded-circle mx-1" href=""><i class="fa fa-link"></i></a>
                         </div>
                     </div>
@@ -176,9 +176,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item first">
                     <div class="portfolio-img rounded overflow-hidden">
-                        <img class="img-fluid" src="img/img-600x400-3.jpg" alt="">
+                        <img class="img-fluid" src="img/placa-05.jpeg" alt="">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-light rounded-circle mx-1" href="img/img-600x400-3.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                            <a class="btn btn-lg-square btn-outline-light rounded-circle mx-1" href="img/placa-05.jpeg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                             <a class="btn btn-lg-square btn-outline-light rounded-circle mx-1" href=""><i class="fa fa-link"></i></a>
                         </div>
                     </div>
@@ -190,23 +190,23 @@
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item second">
                     <div class="portfolio-img rounded overflow-hidden">
-                        <img class="img-fluid" src="img/img-600x400-2.jpg" alt="">
+                        <img class="img-fluid" src="img/manut-ar-03-600x400.jpg" alt="">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-light rounded-circle mx-1" href="img/img-600x400-2.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                            <a class="btn btn-lg-square btn-outline-light rounded-circle mx-1" href="img/manut-ar-03-600x400.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                             <a class="btn btn-lg-square btn-outline-light rounded-circle mx-1" href=""><i class="fa fa-link"></i></a>
                         </div>
                     </div>
                     <div class="pt-3">
-                        <p class="text-primary mb-0">Turbinas de Vento</p>
+                        <p class="text-primary mb-0">Manutenção e Limpeza</p>
                         <hr class="text-primary w-25 my-2">
                         <h5 class="lh-base">Tecnologia de ponta para máxima eficiência e economia.</h5>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item third">
                     <div class="portfolio-img rounded overflow-hidden">
-                        <img class="img-fluid" src="img/img-600x400-1.jpg" alt="">
+                        <img class="img-fluid" src="img/manut-ar-01-600x400.jpg" alt="">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-light rounded-circle mx-1" href="img/img-600x400-1.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                            <a class="btn btn-lg-square btn-outline-light rounded-circle mx-1" href="img/manut-ar-01-600x400.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                             <a class="btn btn-lg-square btn-outline-light rounded-circle mx-1" href=""><i class="fa fa-link"></i></a>
                         </div>
                     </div>
@@ -287,9 +287,9 @@
                         </div>
                     </div>
                     <div class="testimonial-text text-center rounded p-4">
-                        <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
-                        <h5 class="mb-1">Nome</h5>
-                        <span class="fst-italic">Cargo</span>
+                        <p>"Fiz a instalação de ar-condicionado com a equipe e o serviço foi impecável. Profissionais qualificados, preço justo e um atendimento incrível!"</p>
+                        <h5 class="mb-1">Fernanda R.</h5>
+                        <span class="fst-italic">Conforto e Qualidade</span>
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
@@ -300,9 +300,9 @@
                         </div>
                     </div>
                     <div class="testimonial-text text-center rounded p-4">
-                        <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
-                        <h5 class="mb-1">Nome</h5>
-                        <span class="fst-italic">Cargo</span>
+                        <p>"Depois da instalação dos painéis solares, minha conta de luz caiu drasticamente! Além da economia, o atendimento foi excelente do início ao fim."</p>
+                        <h5 class="mb-1">João M.</h5>
+                        <span class="fst-italic">Economia Surpreendente</span>
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
@@ -313,9 +313,9 @@
                         </div>
                     </div>
                     <div class="testimonial-text text-center rounded p-4">
-                        <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
-                        <h5 class="mb-1">Nome</h5>
-                        <span class="fst-italic">Cargo</span>
+                        <p>"Não sabia que a limpeza dos painéis solares fazia tanta diferença! Depois do serviço, percebi um aumento na eficiência do sistema. Super recomendo!"</p>
+                        <h5 class="mb-1">Carlos L.</h5>
+                        <span class="fst-italic">Manutenção Que Faz Diferença</span>
                     </div>
                 </div>
             </div>
@@ -399,7 +399,7 @@
 
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
+    <a href="https://api.whatsapp.com/send?phone=5527999450945" class="btn btn-lg btn-primary btn-lg-square btn-whatsapp rounded-circle back-to-top" target="_blank" rel="noopener noreferrer"><i class="bi bi-whatsapp"></i></a>
 
 
     <!-- JavaScript Libraries -->
