--- a/service.html
+++ b/service.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Eletrolex - Soluções em Energia Renovável</title>
+    <title>Eletrolex Solar - Soluções em Energia Renovável</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -124,7 +124,7 @@
             <div class="row g-4">
                 <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item rounded overflow-hidden">
-                        <img class="img-fluid" src="img/img-600x400-1.jpg" alt="">
+                        <img class="img-fluid" src="img/placa-07.jpeg" alt="">
                         <div class="position-relative p-4 pt-0">
                             <div class="service-icon">
                                 <i class="fa fa-solar-panel fa-3x"></i>
@@ -137,26 +137,27 @@
                 </div>
                 <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item rounded overflow-hidden">
-                        <img class="img-fluid" src="img/img-600x400-2.jpg" alt="">
+                        <img class="img-fluid" src="img/manut-ar-01-600x400.jpg" alt="">
                         <div class="position-relative p-4 pt-0">
                             <div class="service-icon">
                                 <i class="fa fa-wind fa-3x"></i>
                             </div>
-                            <h4 class="mb-3">Turbinas Eólicas</h4>
-                            <p>Tecnologia de ponta em geração de energia eólica, proporcionando soluções sustentáveis e de alto desempenho.</p>
+                            <h4 class="mb-3">Ar-Condicionados</h4>
+                            <p>Climatização Inteligente,
+                                Instalação, manutenção e limpeza de ar-condicionado com eficiência, economia e conforto garantidos.</p>
                             <a class="small fw-medium" href="">Saiba Mais<i class="fa fa-arrow-right ms-2"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="service-item rounded overflow-hidden">
-                        <img class="img-fluid" src="img/img-600x400-3.jpg" alt="">
+                        <img class="img-fluid" src="img/placa-02.jpeg" alt="">
                         <div class="position-relative p-4 pt-0">
                             <div class="service-icon">
                                 <i class="fa fa-lightbulb fa-3x"></i>
                             </div>
-                            <h4 class="mb-3">Usinas Hidrelétricas</h4>
-                            <p>Soluções integradas de energia hidrelétrica, maximizando a eficiência e o respeito ao meio ambiente.</p>
+                            <h4 class="mb-3">Limpeza de Placas e Sistemas</h4>
+                            <p>A limpeza regular dos painéis solares garante mais energia e maior durabilidade. Mantenha seu sistema sempre no melhor desempenho!</p>
                             <a class="small fw-medium" href="">Saiba Mais<i class="fa fa-arrow-right ms-2"></i></a>
                         </div>
                     </div>
@@ -234,7 +235,7 @@
                                     </div>
                                     <div class="ms-4">
                                         <p class="mb-0">Equipe</p>
-                                        <h5 class="mb-0">Especializada</h5>
+                                        <h5 class="mb-0">Dedicada</h5>
                                     </div>
                                 </div>
                             </div>
@@ -265,7 +266,7 @@
                 </div>
                 <div class="col-lg-6 pe-lg-0 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
                     <div class="position-relative h-100">
-                        <img class="position-absolute img-fluid w-100 h-100" src="img/feature.jpg" style="object-fit: cover;" alt="">
+                        <img class="position-absolute img-fluid w-100 h-100" src="img/carousel-3.jpg" style="object-fit: cover;" alt="">
                     </div>
                 </div>
             </div>
@@ -279,7 +280,7 @@
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                 <h6 class="text-primary">Depoimentos</h6>
-                <h1 class="mb-4">O que nossos clientes dizem sobre nós!</h1>
+                <h1 class="mb-4">O que nossos clientes dizem!</h1>
             </div>
             <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
                 <div class="testimonial-item text-center">
@@ -290,9 +291,9 @@
                         </div>
                     </div>
                     <div class="testimonial-text text-center rounded p-4">
-                        <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
-                        <h5 class="mb-1">Nome do Cliente</h5>
-                        <span class="fst-italic">Profissão</span>
+                        <p>"Fiz a instalação de ar-condicionado com a equipe e o serviço foi impecável. Profissionais qualificados, preço justo e um atendimento incrível!"</p>
+                        <h5 class="mb-1">Fernanda R.</h5>
+                        <span class="fst-italic">Conforto e Qualidade</span>
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
@@ -303,9 +304,9 @@
                         </div>
                     </div>
                     <div class="testimonial-text text-center rounded p-4">
-                        <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
-                        <h5 class="mb-1">Nome do Cliente</h5>
-                        <span class="fst-italic">Profissão</span>
+                        <p>"Depois da instalação dos painéis solares, minha conta de luz caiu drasticamente! Além da economia, o atendimento foi excelente do início ao fim."</p>
+                        <h5 class="mb-1">João M.</h5>
+                        <span class="fst-italic">Economia Surpreendente</span>
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
@@ -316,9 +317,9 @@
                         </div>
                     </div>
                     <div class="testimonial-text text-center rounded p-4">
-                        <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
-                        <h5 class="mb-1">Nome do Cliente</h5>
-                        <span class="fst-italic">Profissão</span>
+                        <p>"Não sabia que a limpeza dos painéis solares fazia tanta diferença! Depois do serviço, percebi um aumento na eficiência do sistema. Super recomendo!"</p>
+                        <h5 class="mb-1">Carlos L.</h5>
+                        <span class="fst-italic">Manutenção Que Faz Diferença</span>
                     </div>
                 </div>
             </div>
@@ -401,7 +402,7 @@
 
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
+    <a href="https://api.whatsapp.com/send?phone=5527999450945" class="btn btn-lg btn-primary btn-lg-square btn-whatsapp rounded-circle back-to-top" target="_blank" rel="noopener noreferrer"><i class="bi bi-whatsapp"></i></a>
 
 
     <!-- JavaScript Libraries -->
