--- a/testimonial.html
+++ b/testimonial.html
@@ -247,7 +247,7 @@
 
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
+    <a href="https://api.whatsapp.com/send?phone=5527999450945" class="btn btn-lg btn-primary btn-lg-square btn-whatsapp rounded-circle back-to-top" target="_blank" rel="noopener noreferrer"><i class="bi bi-whatsapp"></i></a>
 
 
     <!-- JavaScript Libraries -->
