--- a/quote.html
+++ b/quote.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Eletrolex - Energia Renovável</title>
+    <title>Eletrolex Solar - Energia Renovável</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -408,7 +408,7 @@
 
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
+    <a href="https://api.whatsapp.com/send?phone=5527999450945" class="btn btn-lg btn-primary btn-lg-square btn-whatsapp rounded-circle back-to-top" target="_blank" rel="noopener noreferrer"><i class="bi bi-whatsapp"></i></a>
 
 
     <!-- JavaScript Libraries -->
