--- a/about.html
+++ b/about.html
@@ -189,7 +189,7 @@
     <!-- About End -->
 
 
-    <!-- Team Start -->
+    <!-- Team Start 
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
@@ -248,7 +248,7 @@
             </div>
         </div>
     </div>
-    <!-- Team End -->
+     Team End -->
 
 
     <!-- Footer Start -->
@@ -259,7 +259,7 @@
                     <h5 class="text-white mb-4">Endereço</h5>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Vila Velha, Espirito Santo, Brasil</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>27 99945-0945</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>eletrolexsolar@gmail.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
