--- a/feature.html
+++ b/feature.html
@@ -246,7 +246,7 @@
                     <h5 class="text-white mb-4">Endereço</h5>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Rua 123, Nova York, EUA</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+55 12 3456-7890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>eletrolexsolar@gmail.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
