--- a/index.html
+++ b/index.html
@@ -2247,7 +2247,7 @@
             e.preventDefault();
             const name = document.getElementById('name').value;
             const phone = document.getElementById('phone').value;
-            const email = document.getElementById('email').value;
+            //const email = document.getElementById('email').value;
 
             alert(`Obrigado, ${name}! Entraremos em contato em breve.`);
             closeModal();
