--- a/index.html
+++ b/index.html
@@ -1101,7 +1101,7 @@
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center me-4">
                     <small class="fa fa-map-marker-alt text-primary me-2"></small>
-                    <small>Vila Velha, ES, Brasil</small>
+                    <small>R. Aristides Miranda 186, Aribiri - Vila Velha, ES | Cep: 29120-580</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <small class="far fa-clock text-primary me-2"></small>
