--- a/contact.html
+++ b/contact.html
@@ -48,11 +48,11 @@
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center me-4">
                     <small class="fa fa-map-marker-alt text-primary me-2"></small>
-                    <small>Vila Velha, ES, Brasil</small>
+                    <small>R. Aristides Miranda 186, Aribiri - Vila Velha, ES | Cep: 29120-580</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <small class="far fa-clock text-primary me-2"></small>
-                    <small>Seg - Sex : 09:00 - 21:00</small>
+                    <small>Seg - Sex : 07:30 - 18:00</small>
                 </div>
             </div>
             <div class="col-lg-5 px-5 text-end">
@@ -177,7 +177,7 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Endereço</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Vila Velha, Espirito Santo, Brasil</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>R. Aristides Miranda 186, Aribiri - Vila Velha, ES | Cep: 29120-580</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>27 99945-0945</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>eletrolexsolar@gmail.com</p>
                     <div class="d-flex pt-2">
